# Root-Analysis

./: CMakeLists.txt  README.md
src/: ExperimentalFunctions.cpp  ExperimentalFunctions.h  FileUtilities.cpp  FileUtilities.h  ImageReader.cpp  ImageReader.h  OcvUtilities.cpp  OcvUtilities.h  TrackbarWindow.cpp  TrackbarWindow.h  autocropper.cpp
